fix positioning of the contents

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
         $('#cardh1').html(company).css('margin', 'auto').css('text-align', 'center');
         // $('#cardh1').css('padding-top','-1px')
-        $('.address').html(address);
-        $('.name').html(name).css('margin-top','-15px');
-        $('.number').html(number).css('margin-top','-15px');
-        $('#indicator').html("Address:");
-        $('#indicator0').html("Name:");
-        $('#indicator1').html("NUmber:");
+        $('.address').html(address).css('font-size', '50%');
+        $('.name').html(name).css('margin-top','-20px').css('font-size', '50%');
+        $('.number').html(number).css('margin-top','-20px').css('font-size','50%');
+        $('#indicator').html("Address:").css('margin-top','-5px');
+        $('#indicator0').html("Name:").css('margin-top','-5px');
+        $('#indicator1').html("Number:").css('margin-top','-5px');
         
 
       });
